--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
    branches: ["main"]
  pull_request:
    branches: ["main"]
+
+env:
+ AZURE_WEBAPP_NAME: Webapp1
+ AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+ 
     
 jobs:
  build:
@@ -25,4 +30,16 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish ./core-web-app-docker.sln --configuration Release --no-test --output '${{env.AZURE_WEBAPP_PACKAGE_PATH}}'
+      
      
+ deployment:
+   runs-on: ubuntu-latest
+   
+   steps:
+    - uses: actions/webapps-deploy@v2
+      with:
+       app-name: ${{env.AZURE_WEBAPP_NAME}}
+       publish-profiles: ${{secrets.AZURE_PUBLISH_PROFILE}}
+       packages: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
